--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ __pycache__/con_gui.cpython-310.pyc
 *.txt
 *.txt
 *.xml
+Bot/Info/client id.txt
+Bot/Info/client id.txt
+Bot/Info/client secret.txt
+Bot/Info/intro video.txt
